--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 #Linda Kettle
 
 .NET with C# A1 Sharp Auto Store Bonus Calculator
-Form Creation with Buttons, read & validate user input, format output
-clear form.
+Form Creation with Buttons, read & validate user input, 
+format output, clear form, exit.
